fix: aumentando gap entre imagem e formulario

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 100px;
+    gap: 150px;
 }
 
 .formulario{
